VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc7Up.err
[8MB/455.1MB][  1%][>                                                 ][1024kB/s]  [16MB/455.1MB][  3%][=>                                                ][1.067MB/s]  [24MB/455.1MB][  5%][==>                                               ][1.333MB/s]  [32MB/455.1MB][  7%][===>                                              ][1.6MB/s]  [40MB/455.1MB][  8%][====>                                             ][1.818MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][1.846MB/s]  [56MB/455.1MB][ 12%][======>                                           ][1.867MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][1.829MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][1.714MB/s]  [80MB/455.1MB][ 17%][========>                                         ][1.6MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][1.492MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][1.477MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][1.529MB/s]  [112MB/455.1MB][ 24%][============>                                     ][1.6MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][1.622MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][1.62MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][1.581MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][1.565MB/s]  [152MB/455.1MB][ 33%][================>                                 ][1.52MB/s]  [160MB/455.1MB][ 35%][=================>                                ][1.481MB/s]  [168MB/455.1MB][ 36%][==================>                               ][1.514MB/s]  [176MB/455.1MB][ 38%][===================>                              ][1.558MB/s]  [184MB/455.1MB][ 40%][====================>                             ][1.573MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][1.574MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][1.527MB/s]  [208MB/455.1MB][ 45%][======================>                           ][1.529MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][1.532MB/s]  [224MB/455.1MB][ 49%][========================>                         ][1.534MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][1.536MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][1.519MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][1.512MB/s]  [256MB/455.1MB][ 56%][============================>                     ][1.524MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][1.544MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][1.563MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][1.582MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][1.609MB/s]  [296MB/455.1MB][ 65%][================================>                 ][1.617MB/s]  [304MB/455.1MB][ 66%][=================================>                ][1.617MB/s]  [312MB/455.1MB][ 68%][==================================>               ][1.608MB/s]  [320MB/455.1MB][ 70%][===================================>              ][1.608MB/s]  [328MB/455.1MB][ 72%][====================================>             ][1.6MB/s]  [336MB/455.1MB][ 73%][====================================>             ][1.6MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][1.6MB/s]  [352MB/455.1MB][ 77%][======================================>           ][1.6MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][1.593MB/s]  [368MB/455.1MB][ 80%][========================================>         ][1.573MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][1.547MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][1.518MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][1.531MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][1.55MB/s]  [408MB/455.1MB][ 89%][============================================>     ][1.557MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][1.564MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][1.547MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][1.527MB/s]  [440MB/455.1MB][ 96%][================================================> ][1.512MB/s]  [448MB/455.1MB][ 98%][=================================================>][1.493MB/s]  [455.1MB/455.1MB][100%][==================================================][1.468MB/s]  [455.1MB/455.1MB][100%][==================================================][1.468MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_2433/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_2433/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
